--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                 
                 <!-- Аксессуар 4 -->
                 <div class="product-card" id="accessory-4">
-                    <img src="https://images.unsplash.com/photo-1581094794329-c8112a89af12?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Камера" class="product-img">
+                    <img src="7680629678.jpg" alt="Камера" class="product-img">
                     <div class="product-info">
                         <h3 class="product-title">Камера для мониторинга</h3>
                         <p class="product-description">HD камера для удаленного наблюдения за процессом печати.</p>
