--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                 
                 <!-- Аксессуар 3 -->
                 <div class="product-card" id="accessory-3">
-                    <img src="https://images.unsplash.com/photo-1581094794329-c8112a89af12?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Сопла" class="product-img">
+                    <img src="S2122b2ac9ab64ae7945460edf3db4820e.webp" alt="Сопла" class="product-img">
                     <div class="product-info">
                         <h3 class="product-title">Набор сменных сопел</h3>
                         <p class="product-description">Набор из 5 сменных сопел разных диаметров для различных типов печати.</p>
