--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 
                 <!-- Аксессуар 2 -->
                 <div class="product-card" id="accessory-2">
-                    <img src="https://images.unsplash.com/photo-1581094794329-c8112a89af12?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Стол для печати" class="product-img">
+                    <img src="orig.webp" alt="Стол для печати" class="product-img">
                     <div class="product-info">
                         <div class="product-tags">
                             <span class="product-tag hot">ХИТ</span>
